# socket_chinese_cheese

./: CMakeLists.txt  README.md  main.cpp
docs/: software_design_document.md
src/: cheese.h  cheesecontroller.cpp  cheesecontroller.h  cheesemodel.cpp  cheesemodel.h  cheesescene.cpp  cheesescene.h  cheesetcpconnection.cpp  cheesetcpconnection.h  cheeseview.cpp  cheeseview.h  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  modedialog.cpp  modedialog.h  modedialog.ui
